--- a/templates/index.html
+++ b/templates/index.html
@@ -27,71 +27,105 @@
             <div class="list-group">
                 {% if user.is_authenticated %}
                 {% if user.is_superuser %}
+                <a href="/admin/" class="list-group-item">
+                    <i class="fas fa-cogs"></i> Admin
+                </a>
+                {% endif %}
 
                 <a href="{% url 'resumen' %}" class="list-group-item">
                     <i class="fas fa-tachometer-alt"></i> Resumen
                 </a>
 
+                {% if perms.proyectoApp.view_actividad or perms.proyectoApp.view_documento or perms.proyectoApp.view_proyecto or perms.proyectoApp.view_cliente %}
                 <div class="dropdown">
                     <a href="#" class="list-group-item dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-project-diagram"></i> Proyecto
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'proyecto-list' %}" class="dropdown-item">
-                                <i class="fas fa-folder"></i> Proyectos
-                            </a>
-                        </li>
-                        <li><a href="{% url 'actividad-list' %}" class="dropdown-item">
+                        {% if perms.proyectoApp.view_actividad %}
+                        <li>
+                            <a href="{% url 'actividad-list' %}" class="dropdown-item">
                                 <i class="fas fa-tasks"></i> Actividades
                             </a>
                         </li>
-                        <li><a href="{% url 'cliente_list' %}" class="dropdown-item">
-                                <i class="fas fa-user-friends"></i> Clientes
-                            </a>
-                        </li>
+                        {% endif %}
+                        {% if perms.proyectoApp.view_documento %}
                         <li><a href="{% url 'documento-list' %}" class="dropdown-item">
                                 <i class="fas fa-file-alt"></i> Documentos
                             </a>
                         </li>
+                        {% endif %}
+                        {% if perms.proyectoApp.view_proyecto %}
+                        <li><a href="{% url 'proyecto-list' %}" class="dropdown-item">
+                                <i class="fas fa-folder"></i> Proyectos
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if perms.proyectoApp.view_cliente %}
+                        <li><a href="{% url 'cliente_list' %}" class="dropdown-item">
+                                <i class="fas fa-user-friends"></i> Clientes
+                            </a>
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
 
-                <a href="/admin/" class="list-group-item">
-                    <i class="fas fa-cogs"></i> Admin
-                </a>
+                {% if perms.baseApp.view_estado %}
                 <a href="{% url 'gestionar_estados' %}" class="list-group-item">
                     <i class="fas fa-plus-circle"></i> Estados
                 </a>
+                {% endif %}
 
                 <div class="dropdown">
                     <a href="#" class="list-group-item dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-project-diagram"></i> Personas
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'cliente_list' %}" class="dropdown-item">
-                                <i class="fas fa-user-friends"></i> Clientes
-                            </a>
-                        </li>
-                        <li><a href="{% url 'empleado_list' %}" class="dropdown-item">
+                        {% if perms.usuarioApp.view_empleado %}
+                        <li>
+                            <a href="{% url 'empleado_list' %}" class="dropdown-item">
                                 <i class="fas fa-users"></i> Empleados
                             </a>
                         </li>
-                        <li><a href="{% url 'lista_usuarios' %}" class="dropdown-item">
+                        {% endif %}
+                        {% if perms.usuarioApp.view_usuario %}
+                        <li>
+                            <a href="{% url 'lista_usuarios' %}" class="dropdown-item">
                                 <i class="fas fa-user"></i> Usuarios
-                            </a></li>
-                        <li><a href="{% url 'asignar_usuarios' %}" class="dropdown-item">
+                            </a>
+                        </li>
+                        {% endif %}
+                        <!-- Aqui no se que if poner -->
+                        <li>
+                            <a href="{% url 'asignar_usuarios' %}" class="dropdown-item">
                                 <i class="fas fa-user-cog"></i> Grupos
-                            </a></li>
-                        <li><a href="{% url 'area_list' %}" class="dropdown-item">
+                            </a>
+                        </li>
+                        <!-- end if -->
+                        {% if perms.proyectoApp.view_cliente %}
+                        <li>
+                            <a href="{% url 'cliente_list' %}" class="dropdown-item">
+                                <i class="fas fa-user-friends"></i> Clientes
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if perms.usuarioApp.view_area %}
+                        <li>
+                            <a href="{% url 'area_list' %}" class="dropdown-item">
                                 <i class="fas fa-building"></i> Área
-                            </a></li>
-                        <li><a href="{% url 'subarea_list' %}" class="dropdown-item">
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if perms.usuarioApp.view_subarea %}
+                        <li>
+                            <a href="{% url 'subarea_list' %}" class="dropdown-item">
                                 <i class="fas fa-sitemap"></i> Sub-Área
-                            </a></li>
+                            </a>
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
 
-                {% endif %}
                 {% else %}
                 <a href="{% url 'login' %}" class="list-group-item">
                     <i class="fas fa-sign-in-alt"></i> Iniciar sesión
@@ -110,13 +144,13 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="userDropdown">
                     <li>
-                        <a class="dropdown-item" href="{% url 'password_change' %}">
-                            <i class="fas fa-user"></i> Mi perfil
+                        <a class="dropdown-item" href="#">
+                            <i class="fas fa-user"></i> Mi Perfil
                         </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#">
-                            <i class="fas fa-cogs"></i> Configuración
+                        <a class="dropdown-item" href="{% url 'password_change' %}">
+                            <i class="fas fa-cogs"></i> Cambiar clave
                         </a>
                     </li>
                     <li>
@@ -144,7 +178,7 @@
         <div id="page-content-wrapper">
             <main class="mx-1"> <!-- Este es el lugar donde se renderizará el contenido de cada vista -->
                 {% block content %}
-                <!-- El contenido de la página (debe ser definido en las plantillas que extiendan este archivo) -->
+                <!-- El contenido de la página -->
                 {% endblock %}
             </main>
         </div>
@@ -157,7 +191,7 @@
     {% block extrascripts %}{% endblock %}
     {% block javascript %}{% endblock %}
     <script>
-        // Sidebar toggle for mobile
+        // Sidebar para telefonos
         document.getElementById('sidebarToggleBtn').addEventListener('click', function () {
             document.getElementById('sidebar').classList.toggle('toggle');
         });
