--- a/templates/usuario/empleados/empleado_list.html
+++ b/templates/usuario/empleados/empleado_list.html
@@ -1,34 +1,44 @@
 {% extends 'index.html' %}
 
 {% block content %}
-  <div class="container mt-4">
-    <h2>Lista de Empleados</h2>
-    <a href="{% url 'empleado_crear' %}" class="btn btn-primary mb-3">Nuevo Empleado</a>
-
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>RUT</th>
-          <th>Nombre</th>
-          <th>Apellidos</th>
-          <th>Email</th>
-          <th>Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for empleado in empleados %}
-          <tr>
-            <td>{{ empleado.rut }}</td>
-            <td>{{ empleado.nombre }}</td>
-            <td>{{ empleado.apellidos }}</td>
-            <td>{{ empleado.email }}</td>
-            <td>
-              <a href="{% url 'empleado_editar' empleado.rut %}" class="btn btn-warning btn-sm">Editar</a>
-              <a href="{% url 'empleado_eliminar' empleado.rut %}" class="btn btn-danger btn-sm">Eliminar</a>
-            </td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+<div class="container mt-4">
+  <div class="row mb-3">
+    <div class="col-md-6">
+      <h2>Lista de Empleados</h2>
+    </div>
+    <div class="col-md-6 text-end">
+      <a href="{% url 'empleado_crear' %}" class="btn btn-primary">
+        <i class="fas fa-plus"></i> Nuevo Empleado
+      </a>
+    </div>
   </div>
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>RUT</th>
+        <th>Nombre</th>
+        <th>Apellidos</th>
+        <th>Email</th>
+        <th>Teléfono</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for empleado in empleados %}
+      <tr>
+        <td>{{ empleado.rut }}</td>
+        <td>{{ empleado.nombre }}</td>
+        <td>{{ empleado.apellidos }}</td>
+        <td>{{ empleado.email }}</td>
+        <td>{{ empleado.telefono }}</td>
+        <td>
+          <a href="{% url 'empleado_editar' empleado.rut %}" class="btn btn-warning btn-sm">Editar</a>
+          <a href="{% url 'empleado_eliminar' empleado.rut %}" class="btn btn-danger btn-sm">Eliminar</a>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endblock %}
