--- a/templates/base/estado/list.html
+++ b/templates/base/estado/list.html
@@ -20,6 +20,12 @@
 
 {% block content %}
 <div class="container-fluid mt-4">
+  <div class="row mb-3">
+    <div class="col-md-6">
+        <h2>Gestión de Estados</h2>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-md-4">
       <div class="card">
@@ -51,7 +57,7 @@
 
     <div class="col-md-8">
       {% for modelo, estados in estados_por_modelo.items %}
-      <h3 class="mt-4 text-capitalize">Estados de {{ modelo }}</h3>
+      <h3 class=" text-capitalize">Estados de {{ modelo }}</h3>
       <div class="table-responsive">
         <table class="table table-striped">
           <thead>
