--- a/templates/base/grupo/manage_groups.html
+++ b/templates/base/grupo/manage_groups.html
@@ -69,17 +69,70 @@
                         <div class="form-group">
                             <label>Permisos:</label>
                             <div class="row">
-                                {% for permission in permissions %}
-                                <div class="col-md-4">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="permissions"
-                                            value="{{ permission.id }}" id="perm_{{ permission.id }}">
-                                        <label class="form-check-label" for="perm_{{ permission.id }}">
-                                            {{ permission.name }}
-                                        </label>
-                                    </div>
+                                <div class="col-md-3">
+                                    <h5>Crear</h5>
+                                    {% for permission in permissions %}
+                                        {% if permission.name|slice:":8" == "Can add " %}
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" 
+                                                       name="permissions" 
+                                                       value="{{ permission.id }}"
+                                                       id="perm_{{ permission.id }}">
+                                                <label class="form-check-label" for="perm_{{ permission.id }}">
+                                                    {{ permission.name|slice:"8:" }}
+                                                </label>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
                                 </div>
-                                {% endfor %}
+                                <div class="col-md-3">
+                                    <h5>Editar</h5>
+                                    {% for permission in permissions %}
+                                        {% if permission.name|slice:":11" == "Can change " %}
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" 
+                                                       name="permissions" 
+                                                       value="{{ permission.id }}"
+                                                       id="perm_{{ permission.id }}">
+                                                <label class="form-check-label" for="perm_{{ permission.id }}">
+                                                    {{ permission.name|slice:"10:" }}
+                                                </label>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                                <div class="col-md-3">
+                                    <h5>Ver</h5>
+                                    {% for permission in permissions %}
+                                        {% if permission.name|slice:":9" == "Can view " %}
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" 
+                                                       name="permissions" 
+                                                       value="{{ permission.id }}"
+                                                       id="perm_{{ permission.id }}">
+                                                <label class="form-check-label" for="perm_{{ permission.id }}">
+                                                    {{ permission.name|slice:"8:" }}
+                                                </label>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                                <div class="col-md-3">
+                                    <h5>Eliminar</h5>
+                                    {% for permission in permissions %}
+                                        {% if permission.name|slice:":11" == "Can delete " %}
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" 
+                                                       name="permissions" 
+                                                       value="{{ permission.id }}"
+                                                       id="perm_{{ permission.id }}">
+                                                <label class="form-check-label" for="perm_{{ permission.id }}">
+                                                    {{ permission.name|slice:"10:" }}
+                                                </label>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
                             </div>
                         </div>
 
@@ -90,4 +143,47 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block javascript %}
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+    const groupSelect = document.getElementById('group');
+    const permissionCheckboxes = document.querySelectorAll('input[name="permissions"]');
+
+    // Objeto para almacenar los permisos de cada grupo
+    const groupPermissions = {
+        // {% for group in groups %}
+        "{{ group.id }}": [
+            // {% for permission in group.permissions.all %}
+            "{{ permission.id }}",
+            // {% endfor %}
+        ],
+        // {% endfor %}
+    };
+
+    // Función para restablecer y marcar permisos
+    function updatePermissions(groupId) {
+        // Desmarcar todos los checkboxes
+        permissionCheckboxes.forEach(checkbox => {
+            checkbox.checked = false;
+        });
+
+        // Si se seleccionó un grupo, marcar sus permisos
+        if (groupId && groupPermissions[groupId]) {
+            groupPermissions[groupId].forEach(permissionId => {
+                const checkbox = document.querySelector(`input[name="permissions"][value="${permissionId}"]`);
+                if (checkbox) {
+                    checkbox.checked = true;
+                }
+            });
+        }
+    }
+
+    // Evento de cambio en la selección de grupo
+    groupSelect.addEventListener('change', function() {
+        updatePermissions(this.value);
+    });
+});
+</script>
 {% endblock %}
