--- a/templates/proyecto/proyecto/delete.html
+++ b/templates/proyecto/proyecto/delete.html
@@ -9,9 +9,9 @@
                     Confirmar Eliminación
                 </div>
                 <div class="card-body">
-                    <p>¿Estás seguro de que deseas eliminar el siguiente {{ proyecto_verbose_name }}?</p>
+                    <p>¿Estás seguro de que deseas eliminar {{ object }}?</p>
                     <div class="alert alert-warning">
-                        {{ object }}
+                        <p>Esto eliminará todos los documentos y actividades asociadas</p>
                     </div>
                     <form method="post">
                         {% csrf_token %}
