--- a/templates/base/estado/list.html
+++ b/templates/base/estado/list.html
@@ -27,6 +27,8 @@
   </div>
 
   <div class="row">
+    
+    {% if perms.baseApp.add_estado %}
     <div class="col-md-4">
       <div class="card">
         <div class="card-header">
@@ -54,6 +56,7 @@
         </div>
       </div>
     </div>
+    {% endif %}
 
     <div class="col-md-8">
       {% for modelo, estados in estados_por_modelo.items %}
@@ -85,12 +88,16 @@
               <td>{{ estado.nombre }}</td>
               <td>{{ estado.descripcion|default:'-' }}</td>
               <td>
+                {% if perms.baseApp.change_estado %}
                 <a href="{% url 'gestionar_estados_editar' estado.id %}" class="btn btn-sm btn-warning">
                   Editar
                 </a>
+                {% endif %}
+                {% if perms.baseApp.delete_estado %}
                 <button class="btn btn-sm btn-danger eliminar-estado" data-id="{{ estado.id }}">
                   Eliminar
                 </button>
+                {% endif %}
               </td>
             </tr>
             {% endfor %}
