--- a/templates/proyecto/clientes/list.html
+++ b/templates/proyecto/clientes/list.html
@@ -6,11 +6,13 @@
         <div class="col-md-6">
             <h2>Lista de Clientes</h2>
         </div>
+        {% if perms.proyectoApp.add_cliente %}
         <div class="col-md-6 text-end">
             <a href="{% url 'cliente_crear' %}" class="btn btn-primary">
                 <i class="fas fa-plus"></i> Nuevo Cliente
             </a>
         </div>
+        {% endif %}
     </div>
 
     <div class="card">
@@ -25,7 +27,11 @@
                             <th>Nombre</th>
                             <th>Correo</th>
                             <th>Teléfono</th>
-                            <th>Acciones</th>
+                            <th>
+                            {% if perms.proyectoApp.change_cliente or perms.proyectoApp.delete_cliente %}
+                                Acciones
+                            {% endif %}
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
@@ -35,14 +41,18 @@
                             <td>{{ cliente.nombre }}</td>
                             <td>{{ cliente.correo }}</td>
                             <td>{{ cliente.telefono }}</td>
-                            <td>
+                            <td class="col-1">
                                 <div class="btn-group" role="group">
+                                    {% if perms.proyectoApp.change_cliente %}
                                     <a href="{% url 'cliente_editar' cliente.pk %}" class="btn btn-sm btn-warning">
                                         <i class="fas fa-edit"></i>
                                     </a>
+                                    {% endif %}
+                                    {% if perms.proyectoApp.delete_cliente %}
                                     <a href="{% url 'cliente_eliminar' cliente.pk %}" class="btn btn-sm btn-danger">
                                         <i class="fas fa-trash"></i>
                                     </a>
+                                    {% endif %}
                                 </div>
                             </td>
                         </tr>
