--- a/templates/usuario/area/subarea/subarea_confirm_delete.html
+++ b/templates/usuario/area/subarea/subarea_confirm_delete.html
@@ -1,12 +1,28 @@
 {% extends 'index.html' %}
 
 {% block content %}
-  <h1>Confirmar eliminación</h1>
-  <p>¿Estás seguro de que deseas eliminar la subárea "{{ object.nombre }}"?</p>
-  
-  <form method="post">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Eliminar</button>
-    <a href="{% url 'subarea_list' %}" class="btn btn-secondary">Cancelar</a>
-  </form>
+<div class="container mt-4">
+  <div class="row">
+      <div class="col-md-6 offset-md-3">
+          <div class="card">
+              <div class="card-header bg-danger text-white">
+                  Confirmar Eliminación
+              </div>
+              <div class="card-body">
+                  <p>¿Estás seguro de que deseas eliminar {{ object }}?</p>
+                  <div class="alert alert-warning">
+                      <p>No eliminará a los empleados asociados a esta Subárea</p>
+                  </div>
+                  <form method="post">
+                      {% csrf_token %}
+                      <div class="d-flex justify-content-between">
+                          <a href="{% url 'subarea_list' %}" class="btn btn-secondary">Cancelar</a>
+                          <button type="submit" class="btn btn-danger">Confirmar Eliminación</button>
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
 {% endblock %}
