--- a/templates/usuario/empleados/empleado_form.html
+++ b/templates/usuario/empleados/empleado_form.html
@@ -1,14 +1,36 @@
 {% extends 'index.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
   <div class="container mt-4">
-    <h2>{% if form.instance.pk %}Editar Empleado{% else %}Nuevo Empleado{% endif %}</h2>
-    <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" class="btn btn-success mt-3">
-        {% if form.instance.pk %}Actualizar{% else %}Crear{% endif %}
-      </button>
-    </form>
-  </div>
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    {% if form.instance.pk %}
+                        Editar empleado
+                    {% else %}
+                        Crear empleado
+                    {% endif %}
+                </div>
+                <div class="card-body">
+                    <form method="post">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <div class="d-flex justify-content-between mt-3">
+                            <a href="{% url 'empleado_list' %}" class="btn btn-secondary">Cancelar</a>
+                            <button type="submit" class="btn btn-primary">
+                                {% if form.instance.pk %}
+                                    Actualizar
+                                {% else %}
+                                    Crear
+                                {% endif %}
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
