--- a/templates/usuario/empleados/empleado_list.html
+++ b/templates/usuario/empleados/empleado_list.html
@@ -6,39 +6,69 @@
     <div class="col-md-6">
       <h2>Lista de Empleados</h2>
     </div>
+    
+    {% if perms.usuarioApp.add_empleado %}
     <div class="col-md-6 text-end">
       <a href="{% url 'empleado_crear' %}" class="btn btn-primary">
         <i class="fas fa-plus"></i> Nuevo Empleado
       </a>
     </div>
+    {% endif %}
   </div>
 
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>RUT</th>
-        <th>Nombre</th>
-        <th>Apellidos</th>
-        <th>Email</th>
-        <th>Teléfono</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for empleado in empleados %}
-      <tr>
-        <td>{{ empleado.rut }}</td>
-        <td>{{ empleado.nombre }}</td>
-        <td>{{ empleado.apellidos }}</td>
-        <td>{{ empleado.email }}</td>
-        <td>{{ empleado.telefono }}</td>
-        <td>
-          <a href="{% url 'empleado_editar' empleado.rut %}" class="btn btn-warning btn-sm">Editar</a>
-          <a href="{% url 'empleado_eliminar' empleado.rut %}" class="btn btn-danger btn-sm">Eliminar</a>
-        </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+  <div class="card">
+    <div class="card-body">
+      {% if object_list %}
+      <div class="table-responsive">
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th>RUT</th>
+              <th>Nombre</th>
+              <th>Apellidos</th>
+              <th>Email</th>
+              <th>Teléfono</th>
+              {% if perms.usuarioApp.change_empleado or perms.usuarioApp.delete_empleado %}
+              <th>Acciones</th>
+              {% endif %}
+            </tr>
+          </thead>
+          <tbody>
+            {% for empleado in empleados %}
+            <tr>
+              <td>{{ empleado.rut }}</td>
+              <td>{{ empleado.nombre }}</td>
+              <td>{{ empleado.apellidos }}</td>
+              <td>{{ empleado.email }}</td>
+              <td>{{ empleado.telefono }}</td>
+              <td class="col-1">
+                <div class="btn-group" role="group">
+                  
+                  {% if perms.usuarioApp.change_empleado %}
+                  <a href="{% url 'empleado_editar' empleado.rut %}" class="btn btn-sm btn-warning">
+                      <i class="fas fa-edit"></i>
+                  </a>
+                  {% endif %}
+                  
+                  {% if perms.usuarioApp.delete_empleado %}
+                  <a href="{% url 'empleado_eliminar' empleado.rut %}" class="btn btn-sm btn-danger">
+                      <i class="fas fa-trash"></i>
+                  </a>
+                  {% endif %}
+                </div>
+            </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+      {% else %}
+        <div class="alert alert-info">
+            No hay registros.
+        </div>
+      {% endif %}
+    </div>
+  </div>
+
 </div>
 {% endblock %}
